Perf: Cleanup repository